--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "pixi.js": "https://aistudiocdn.com/pixi.js@^7.4.2",
+    "pixi.js": "https://aistudiocdn.com/pixi.js@latest",
     "path": "https://aistudiocdn.com/path@^0.12.7",
     "vite": "https://aistudiocdn.com/vite@^7.2.4",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
