--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   "imports": {
     "react/": "https://aistudiocdn.com/react@^19.2.1/",
     "react": "https://aistudiocdn.com/react@^19.2.1",
-    "pixi.js": "https://aistudiocdn.com/pixi.js@^8.14.3",
     "vite": "https://aistudiocdn.com/vite@^7.2.6",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
-    "path": "https://aistudiocdn.com/path@^0.12.7",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
+    "pixi.js": "https://aistudiocdn.com/pixi.js@^8.14.3",
+    "path": "https://aistudiocdn.com/path@^0.12.7"
   }
 }
 </script>
