--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     "vite": "https://aistudiocdn.com/vite@^7.2.6",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
-    "pixi.js": "https://aistudiocdn.com/pixi.js@^7.4.2"
+    "pixi.js": "https://aistudiocdn.com/pixi.js@7.4.2"
   }
 }
 </script>
